# geometry

./: CMakeLists.txt  LICENSE  README.md
include/public/obsidian/geometry/core/: map.h  surface.h
include/public/obsidian/geometry/hex/: coordinates.h  disk.h  hash.h  interpolation.h  neighbor.h  rotation.h  round.h  xy.h
samples/: CMakeLists.txt
samples/random_grid/: CMakeLists.txt  fixed_grid.cpp  grid.h  random_color_grid.cpp  random_grid_cli.cpp  random_system.cpp  sfhex.h  xy2sfml.h
